fix(PlayerPrimaryInfo): add overflow hidden to player name to prevent text overflow

--- a/src/components/Pages/PlayersPage/PlayerCard/CardHeader/PlayerPrimaryInfo/PlayerPrimaryInfo.module.scss
+++ b/src/components/Pages/PlayersPage/PlayerCard/CardHeader/PlayerPrimaryInfo/PlayerPrimaryInfo.module.scss
@@ -15,6 +15,7 @@
   text-decoration: underline;
   text-decoration-color: #42464d;
   text-underline-offset: 2px;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   position: relative;
